# react-native-native-runtime

./: CONTRIBUTING.md  LICENSE  README.md  package.json  react-native-objc-runtime.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: JSIJNIConversion.cpp  JSIJNIConversion.h  JavaRuntime.cpp  MakeJSIRuntime.h
android/src/main/cpp/java-bindings/: JArrayList.h  JHashMap.cpp  JHashMap.h
android/src/main/java/com/reactnativejavaruntime/: JavaRuntimeModule.java  JavaRuntimePackage.java
android/src/main/java/com/reactnativeobjcruntime/: ObjcRuntimeModule.java  ObjcRuntimePackage.java
cpp/: ClassHostObject.mm  ClassInstanceHostObject.h  ClassInstanceHostObject.mm  JSIUtils.h  ObjCHostObject.h  ObjcHostObject.mm  gObjcConstants.h  react-native-objc-runtime.h  react-native-objc-runtime.mm
example/: .eslintrc.json  app.json  package.json
example/android/: build.gradle  gradle.properties  settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/java/com/example/reactnativejavaruntime/: ReactNativeFlipper.java
example/android/app/src/debug/java/com/example/reactnativeobjcruntime/: ReactNativeFlipper.java
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/example/reactnativejavaruntime/: MainActivity.java  MainApplication.java
example/android/app/src/main/java/com/example/reactnativeobjcruntime/: MainActivity.java  MainApplication.java
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift  Podfile
example/ios/ObjcRuntimeExample/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
example/ios/ObjcRuntimeExample.xcodeproj/: project.pbxproj
example/ios/ObjcRuntimeExample.xcodeproj/xcshareddata/xcschemes/: ObjcRuntimeExample.xcscheme
example/ios/ObjcRuntimeExample.xcworkspace/: contents.xcworkspacedata
example/ios/ObjcRuntimeExample/objc-constants/: Foundation.json
example/src/: App.tsx  objc-types.d.ts
ios/: ClassHostObject.h  ClassHostObject.mm  ClassInstanceHostObject.mm  HostObjectClass.h  HostObjectClass.mm  HostObjectClassInstance.h  HostObjectClassInstance.mm  HostObjectObjc.h  HostObjectObjc.mm  HostObjectProtocol.h  HostObjectProtocol.mm  HostObjectSelector.h  HostObjectSelector.mm  HostObjectUtils.h  HostObjectUtils.mm  JSIUtils.mm  JSIUtilsExtended.mm  ObjCHostObject.h  ObjcHostObject.mm  ObjcRuntime.h  ObjcRuntime.mm  gObjcConstants.mm  react-native-objc-runtime.h  react-native-objc-runtime.mm
ios/ObjcRuntime.xcodeproj/: project.pbxproj
scripts/: generate-objc-constants-types.d.ts  generate-objc-constants.js  generateBindings.js  generateBindingsTypes.d.ts
src/: index.tsx
